# NNI-pred

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: data_exploration_report.md  feature_engineering.md  methodology.md  metrics.md  modeling-details.md  research-plan-zh.md  research_plan.md  soil_columns.md  stage1_correlation_analysis_report.md  stage1_spatiotemporal_analysis_report.md  stage1_summary_report.md  water_columns.md
models/final_models/: ACE_XGBoost.pkl  CLO_XGBoost.pkl  DM-ACE_RandomForest.pkl  DN-IMI_RandomForest.pkl  IMI-UREA_XGBoost.pkl  IMI_RandomForest.pkl  THIA_XGBoost.pkl  mNNIs_XGBoost.pkl
models/nested_cv_results/: config.json  detailed_results.json  model_selection_report.txt  nested_cv_results.csv
models/test-full_cv_results_17/: config.json  detailed_results.json  model_selection_report.txt  nested_cv_results.csv  oof_predictions.csv
models/test-tweedie-xgb/: config.json  detailed_results.json  model_selection_report.txt  nested_cv_results.csv  oof_predictions.csv
notebooks/: data_analysis.ipynb  explore_merged_data.ipynb  explore_preprocessing.ipynb  explore_soil_data.ipynb
output/: detection_rates_overall.csv  detection_rates_seasonal.csv
reports/: preprocessing_report.txt
scripts/: calculate_detection_rate.py  correlation_analysis.py  explore_data.py  full_test.sh  idw_merge.py  inference.py  minimum_test.sh  scaling_and_pca.py  select_seed.py  sfe_merge.py  spatiotemporal_analysis.py  split_excel_dataset.py  train_all.py  train_nested_cv.py  train_rf_simplest.py  train_simplest.py  visualize.py
src/nni_pred/: __init__.py  (+7 more)
utils/: split_raw_dataset.py
(+91 files in other folders)
