[project]
name = "nni-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Leo", email = "liaofeng0203@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "joblib>=1.5.3",
  "jupyter>=1.1.1",
  "loguru>=0.7.3",
  "matplotlib>=3.10.7",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "pytest>=9.0.2",
  "scikit-learn>=1.7.2",
  "scipy>=1.16.3",
  "seaborn>=0.13.2",
  "tabulate>=0.9.0",
  "tqdm>=4.67.1",
  "xgboost>=3.1.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
